src/assets/sass/base/_base.scss
@use '../abstracts/all' as *;

* {
  margin: 0;
}

html{
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  
}

::selection {
  background-color: $soft-blue;
  color: white;
}

ul {
  list-style: none;
  padding: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

p {
  color: $grayish-blue;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: $very-dark-blue;
  font-weight: 500;
}

h2 {
  font-size: clamp(1.5rem, 4vw, 1.9rem);
}

